2021-06-13  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-wdired): Add helpful message for edit mode.

2021-06-13  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--hook-function): Remap faces buffer-locally.

2021-06-09  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--advice--repeat-over-lines, diredc-mode): Fix
	Emacs bug #48883: Improper marking.

2021-06-09  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hist-previous-directory, diredc-hist-change-directory)
	(diredc-hist-up-directory): Fix navigation to restore-point when
	dired-omit-mode is not active.

2021-06-06  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--chmod-font-lock-regex): Account for ACL
	directories.

2021-06-03  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-beginning-of-buffer, diredc-end-of-buffer):
	New DWIM functions.
	(diredc--create-keymap): Bind them.

2021-06-03  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--report-counts-and-sizes): New feature, for
	displaying summary of marked files in (new) header-line.
	(diredc-header-line, diredc-header-*-marks)
	(diredc-header-D-marks): Faces for new feature.
	(diredc-header-line): defcustom to toggle new feature.
	(diredc--thousands): Support function, for improved readability.
	(diredc--mark-msg): New helper function for feature.
	(diredc-thousands-separator): Option for the support function.
	(diredc-mode, diredc--hook-function): Make use of header-line
	consistent.
	(diredc--hook-function--post-command): Use new feature.

2021-06-02  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--match-command): Allow async shell commands to
	over-ride shell aliases.
	(diredc--hook-function, diredc-browse-mode, diredc-history-mode)
	(diredc-mode): Use #' notation.

2021-06-01  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-mode): Improve toggling of mode features and
	window-dedication.

2021-05-23  Boruch Baum  <boruch_baum@gmx.com>
