@@ -1,3 +1,8 @@
+2022-01-12  Boruch Baum  <boruch_baum@gmx.com>
+
+	* diredc.el (diredc-browse--hook-function): Fontify browse
+	buffers.
+
 2021-06-13  Boruch Baum  <boruch_baum@gmx.com>
 
 	* diredc.el (diredc-wdired): Add helpful message for edit mode.
